# sse-price-volatility

./: .gitignore  IMPROVE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: arima.instructions.md  data.instructions.md  garch.instructions.md  jupyter.instructions.md  modeling.instructions.md  python.instructions.md
data/processed/: train_processed.csv
data/raw/: test_data_sh.000001_2021-01-01_2025-12-31.csv  test_data_sh.000001_2024-07-01_2024-12-31.csv  train_data_sh.000001_2000-01-01_2024-06-30.csv  train_data_sh.000001_2016-01-01_2020-12-31.csv
notebooks/: 01_eda.ipynb  02_arima.ipynb  03_garch.ipynb
notebooks/.ipynb_checkpoints/: 01_eda-checkpoint.ipynb  02_arima-checkpoint.ipynb  03_garch-checkpoint.ipynb
outputs/reports/: report.md  report_full.md
prompts/: 01_init_project.md  02_build_data_loader.md  03_build_preprocess.md  04_build_eda.md  05_build_arima.md  06_build_garch.md  07_write_report.md  08_build_notebooks.md
src/: arima_model.py  baostock_helper.py  data_loader.py  eda.py  evaluate.py  garch_model.py  plot_config.py  preprocess.py  report.py  sh_index_ingest.py
study/: ACF_PACF定义应用.md  ADF检验.md  AR_MA模型.md
tests/: test_arima_model.py  test_eda.py  test_evaluate.py  test_preprocess.py
