[project]
name = "sse-price-volatility"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.13"
dependencies = [
    "baostock (>=0.8.9,<0.9.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "pymongo (>=4.16.0,<5.0.0)",
    "pmdarima (>=2.1.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "arch (>=8.0.0,<9.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "nbconvert (>=7.17.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
